--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
         <div class="nav-left">
             <a href=""><strong>Colorama Print</strong></a>
         </div>
+        <div class="menu-button">
+            <div class="hamburger-menu"></div>
+        </div>
         <div class="nav-right">
-            <ul>
+            <ul class="nav-list">
                 <li><a href="#home">Work</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
@@ -21,44 +24,10 @@
         </div>
     </nav>
     <main>
-        <div class="grid-container">
-            <div class="grid-item"><img src="images/535.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/776.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/AMETHYST1.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/etikete.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/baner.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/bilbord.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/BizCard_Mockup_V54.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/Bookmarkers.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/brutal texture.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/casa.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/dalija.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/deda mraz rgb.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/devojka tamna pozadina.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/Flower-Art-263.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/jb.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/ilustracija za planer.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/korica knjige prikaz.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/korica.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/M studio.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/дипломски-50.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/дипломски-48.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/UT.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/tricia lila.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/tigar2.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/sply.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/prikaz logo i prozorska.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/pozivnice.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/MT.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/Mslika.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/Mart.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/madero.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/Branding.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/brutal.jpg" class="clickable" loading="lazy"></div>
-            <div class="grid-item"><img src="images/tricia lila.jpg" class="clickable" loading="lazy"></div>
+        <div class="grid-container" id="portfolio"></div>
     </main>
     <footer>
-        <p>&copy; 2024 Colorama print. All rights reserved.</p>
+        <p>2024 Colorama print. All rights reserved.</p>
     </footer>
     <div id="myModal" class="modal">
         <span class="close">&times;</span>
