--- a/about.html
+++ b/about.html
@@ -12,8 +12,11 @@
             <div class="nav-left">
                 <a href=""><strong>Colorama Print</strong></a>
             </div>
+            <div class="menu-button">
+                <div class="hamburger-menu"></div>
+            </div>
             <div class="nav-right">
-                <ul>
+                <ul class="nav-list">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
@@ -30,7 +33,8 @@
             </div>
         </main>
         <footer>
-            <p>&copy; 2024 Colorama print. All rights reserved.</p>
+            <p>2024 Colorama print. All rights reserved.</p>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
