--- a/contact.html
+++ b/contact.html
@@ -12,8 +12,11 @@
             <div class="nav-left">
                 <a href=""><strong>Colorama Print</strong></a>
             </div>
+            <div class="menu-button">
+                <div class="hamburger-menu"></div>
+            </div>
             <div class="nav-right">
-                <ul>
+                <ul class="nav-list">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -39,7 +42,8 @@
             </form>
         </section>
         <footer>
-            <p>&copy; 2024 Colorama print. All rights reserved.</p>
+            <p>2024 Colorama print. All rights reserved.</p>
         </footer>
+        <script src="script.js"></script>
     </body>
 </html>
