--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </nav>
     <main>
         <div class="grid-container" id="portfolio"></div>
-    </main>
+    </main> 
     <footer>
         <p>2024 Colorama print. All rights reserved.</p>
     </footer>
@@ -34,6 +34,7 @@
         <img class="modal-content" id="img01">
         <div id="caption"></div>
     </div>
+    <button id="backToTopBtn" title="Go to top"><img src="images/icons8-top-50.png"></button>
     <script src="script.js"></script>
 </body>
 </html>
