--- a/index.html
+++ b/index.html
@@ -7,7 +7,28 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/header.css">
 </head>
-<body>
+<body> 
+    
+    <div id="landingPage" class="landing-page">
+        <h1 class="landing-text">
+            <span>C</span>
+            <span>o</span>
+            <span>l</span>
+            <span>o</span>
+            <span>r</span>
+            <span>a</span>
+            <span>m</span>
+            <span>a</span> 
+            <span> </span>
+            <span> </span>
+            <span>P</span>
+            <span>r</span>
+            <span>i</span>
+            <span>n</span>
+            <span>t</span>
+        </h1>
+    </div>
+    
     <nav>
         <div class="nav-left">
             <a href=""><strong>Colorama Print</strong></a>
@@ -23,7 +44,7 @@
             </ul>
         </div>
     </nav>
-    <main>
+    <main> 
         <div class="grid-container" id="portfolio"></div>
     </main> 
     <footer>
