--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <div class="nav-right">
                 <ul class="nav-list">
                     <li><a href="index.html">Work</a></li>
-                    <li><a href="#about">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
@@ -36,5 +36,6 @@
             <p>2024 Colorama print. All rights reserved.</p>
         </footer>
         <script src="script.js"></script>
+        <script src="menu.js"></script>
     </body>
 </html>
