--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="styles/header.css">
     </head>
     <body>
-        <nav>
+        <nav> 
             <div class="nav-left">
                 <a href=""><strong>Colorama Print</strong></a>
             </div>
@@ -19,7 +19,7 @@
                 <ul class="nav-list">
                     <li><a href="index.html">Work</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
         </nav>
@@ -45,5 +45,6 @@
             <p>2024 Colorama print. All rights reserved.</p>
         </footer>
         <script src="script.js"></script>
+        <script src="menu.js"></script>
     </body>
 </html>
