--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="nav-right">
             <ul class="nav-list">
-                <li><a href="#home">Work</a></li>
+                <li><a href="index.html">Work</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
@@ -57,5 +57,6 @@
     </div>
     <button id="backToTopBtn" title="Go to top"><img src="images/icons8-top-50.png"></button>
     <script src="script.js"></script>
+    <script src="menu.js"></script>
 </body>
 </html>
