--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <body>
         <nav> 
             <div class="nav-left">
-                <a href=""><strong>Colorama Print</strong></a>
+                <img src="images/COLORAMALOGO.png">
             </div>
             <div class="menu-button">
                 <div class="hamburger-menu"></div>
