--- a/about.html
+++ b/about.html
@@ -1,41 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About</title>
-        <link rel="stylesheet" href="styles/header.css">
-        <link rel="stylesheet" href="styles/about.css">
-    </head>
-    <body>
-        <nav>
-            <div class="nav-left">
-                <a href=""><strong>Colorama Print</strong></a>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/about.css">
+</head>
+<body>
+    <nav>
+        <div class="nav-left">
+            <img src="images/COLORAMALOGO.png" alt="Colorama Logo">
+        </div>
+        <div class="menu-button">
+            <div class="hamburger-menu"></div>
+        </div>
+        <div class="nav-right">
+            <ul class="nav-list">
+                <li><a href="index.html">Work</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div class="content">
+            <div class="image"><img src="images/COLORAMALOGO.png" alt="Colorama"></div>
+            <div class="text">
+                <p>Colorama Print is a leading graphic design company specializing in creating stunning visual content for various media platforms. Our team of skilled designers is dedicated to delivering high-quality, innovative designs that captivate and inspire.</p>
             </div>
-            <div class="menu-button">
-                <div class="hamburger-menu"></div>
-            </div>
-            <div class="nav-right">
-                <ul class="nav-list">
-                    <li><a href="index.html">Work</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
-        </nav>
-        <main>
-            <div class="content">
-                <div class="image"><img src="images/Bookmarkers.jpg" alt="Bookmarkers"></div>
-                <div class="text">
-                    <h1>Colorama Print</h1>
-                    <p>Colorama Print is a leading graphic design company specializing in creating stunning visual content for various media platforms. Our team of skilled designers is dedicated to delivering high-quality, innovative designs that captivate and inspire.</p>
-                </div>
-            </div>
-        </main>
-        <footer>
-            <p>2024 Colorama print. All rights reserved.</p>
-        </footer>
-        <script src="script.js"></script>
-        <script src="menu.js"></script>
-    </body>
+        </div>
+    </main>
+    <footer>
+        <p>2024 Colorama print. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
+    <script src="menu.js"></script>
+</body>
 </html>
