--- a/index.html
+++ b/index.html
@@ -7,31 +7,14 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/header.css">
 </head>
-<body> 
-    
+<body>
     <div id="landingPage" class="landing-page">
-        <h1 class="landing-text">
-            <span>C</span>
-            <span>o</span>
-            <span>l</span>
-            <span>o</span>
-            <span>r</span>
-            <span>a</span>
-            <span>m</span>
-            <span>a</span> 
-            <span> </span>
-            <span> </span>
-            <span>P</span>
-            <span>r</span>
-            <span>i</span>
-            <span>n</span>
-            <span>t</span>
-        </h1>
+        <img src="images/COLORAMALOGO.png" class="landing-logo">
     </div>
     
     <nav>
         <div class="nav-left">
-            <a href=""><strong>Colorama Print</strong></a>
+            <img src="images/COLORAMALOGO.png">
         </div>
         <div class="menu-button">
             <div class="hamburger-menu"></div>
@@ -54,6 +37,8 @@
         <span class="close">&times;</span>
         <img class="modal-content" id="img01">
         <div id="caption"></div>
+        <button class="nav-btn" id="prevBtn">&#10094;</button>
+        <button class="nav-btn" id="nextBtn">&#10095;</button>
     </div>
     <button id="backToTopBtn" title="Go to top"><img src="images/icons8-top-50.png"></button>
     <script src="script.js"></script>
