--- a/contact.html
+++ b/contact.html
@@ -6,12 +6,11 @@
     <title>Graphic Design Portfolio</title>
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/header.css">
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
     <nav> 
         <div class="nav-left">
-            <img src="images/COLORAMALOGO.png" alt="Colorama Logo">
+            <img src="images/COLORAMALOGO.png">
         </div>
         <div class="menu-button">
             <div class="hamburger-menu"></div>
@@ -38,8 +37,6 @@
             
             <label for="message">Message:</label>
             <textarea id="message" name="message" rows="4" required></textarea>
-
-            <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY"></div>
             
             <button type="submit">Submit</button>
         </form>
